# onec-release-dates

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check-its-news.yml  deploy-pages.yml  update-data.yml  update-pages.yml
docs/: index.html
docs/configs/: ARAutomation20_2_4.html  ARAutomation20_2_5.html  Accounting20_82_2_0.html  Accounting30_3_0.html  AccountingAIBase_2_0.html  AccountingAI_2_0.html  AccountingBase20_82_2_0.html  AccountingCorpIFRS3_3_2.html  AccountingNPO_3_0.html  AutoSalon60_6_0.html  BudgetComUkrBase_1_0.html  BudgetDocMng30_3_0.html  CConstr_3_0.html  CEL32_3_2.html  ClientEDOBase_2_7.html  ClientEDOBase_2_9.html  CorpUniversity_3_0.html  CorpUniversity_3_1.html  CorporatePerformanceManagement30_3_0.html  CorporatePerformanceManagement31_3_1.html  CorporatePerformanceManagement32_3_2.html  DocMngCorp14_1_4.html  DocMng_2_0.html  ETP_2_0.html  EnterpriseERP20_2_5.html  GMZ_1_0.html  HRM30_3_0.html  HRMBase30_3_0.html  HRMCorp30_3_1.html  HRMCorp_2_5.html  Modeling_2_1.html  PayDocs_1_0.html  Platform83_8_3.html  RetailBase23_2_3.html  SSL31_3_1.html  STest_3_0.html  SmallBusiness16_1_5.html  SmallBusinessBase16_1_6.html  SmallBusinessBase30_3_0.html  StateAccounting20_2_0.html  (+12 more)
reports/: 1c-release-dates.json  1c-release-dates.md
site/: index.html
site/assets/: styles.css
site/configs/: ACC.html  ACC_1_1.html  ACC_1_2.html  ARAutomation11.html  ARAutomation11_1_1.html  ARAutomation20.html  ARAutomation20_2_2.html  ARAutomation20_2_4.html  ARAutomation20_2_5.html  Accounting20_82.html  Accounting20_82_2_0.html  Accounting30.html  Accounting30_2_0.html  Accounting30_3_0.html  AccountingAI.html  AccountingAIBase.html  AccountingAIBase_2_0.html  AccountingAICorp.html  AccountingAICorp_2_0.html  AccountingAI_2_0.html  AccountingBase20_82.html  AccountingBase20_82_2_0.html  AccountingBase30.html  AccountingBase30_2_0.html  AccountingBase30_3_0.html  AccountingCorp.html  AccountingCorp30.html  AccountingCorp30_2_0.html  AccountingCorp30_3_0.html  AccountingCorpIFRS3.html  AccountingCorpIFRS3_3_1.html  AccountingCorpIFRS3_3_2.html  AccountingCorpIFRS3_3_3.html  AccountingCorp_2_0.html  AccountingCorp_3_0.html  AccountingGP.html  AccountingGPBase.html  AccountingGPBase_3_0.html  AccountingGP_3_0.html  AccountingNPO.html  (+190 more)
site/data/: summary.json
src/onec_release_dates/: __init__.py  collector.py
tests/: test_collector.py
