[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "onec-release-dates"
version = "0.1.0"
description = "Collect 1C configuration release dates from public ITS news and vendor fallback sources."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Mussolene" }
]
dependencies = []

[project.scripts]
onec-release-dates = "onec_release_dates.collector:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onec_release_dates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
