[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "onec-release-dates"
version = "0.1.0"
description = "Public 1C configuration release-date database and static site generator."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "mussolene" },
]
keywords = ["1c", "releases", "github-pages", "static-site"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://mussolene.github.io/onec-release-dates/"
Repository = "https://github.com/mussolene/onec-release-dates"
Issues = "https://github.com/mussolene/onec-release-dates/issues"

[project.scripts]
onec-release-dates = "onec_release_dates.collector:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onec_release_dates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
